@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.giantbomb"
        name="Giant Bomb"
-       version="4.0.0"
+       version="4.1.1"
        provider-name="Jim">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
